--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 	
 	<div class="center">
 	<div class="animated fadeInDown">
-	<a href="http://steamcommunity.com/groups/ZadboiZ"><img src="TYTTO.png"></a></div>
+	<a target="_blank" href="http://steamcommunity.com/groups/ZadboiZ"><img src="TYTTO.png"></a></div>
 
 <!--Name Scroll -->
 <marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="8">
 	<i><b>
-		<a href="http://steamcommunity.com/id/papaSev/">Papa $eVoN</a>
+		<a target="_blank" href="http://steamcommunity.com/id/papaSev/">Papa $eVoN</a>
 																	  <a>:</a>
 		<a>Developer</a>
 		<a> - </a>
-		<a href="http://steamcommunity.com/id/Awonere/">Mesdo</a>
+		<a target="_blank" href="http://steamcommunity.com/id/Awonere/">Mesdo</a>
 																	  <a>:</a>
 		<a>Co-Developer</a>
 		<a> - </a>
-		<a href="http://steamcommunity.com/id/yuriitaaard32/">ｄｉｆｆｅｒｅｎｔ</a>
+		<a target="_blank" href="http://steamcommunity.com/id/yuriitaaard32/">ｄｉｆｆｅｒｅｎｔ</a>
 																	  <a>:</a>
 		<a>Trusted User</a>
 	</b></i>
