--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--Name Scroll -->
 <marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="8">
 	<i><b>
-		<a target="_blank" href="http://steamcommunity.com/id/papaSev/">Papa $eVoN</a>
+		<a target="_blank" href="http://steamcommunity.com/id/papaSevon12">Papa $eVoN</a>
 																	  <a>:</a>
 		<a>Developer</a>
 		<a> - </a>
