--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div class="center">
 	<div class="animated fadeInDown">
-	<a target="_blank" href="http://steamcommunity.com/groups/ZadboiZ"><img src="TYTTO.png"></a></div>
+	<a target="_blank" href="http://omegacheat.freeforums.net/"><img src="TYTTO.png"></a></div>
 
 <!--Name Scroll -->
 <marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="8">
