--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div class="center">
 	<div class="animated fadeInDown">
-	<a target="_blank" href="http://omegacheat.freeforums.net/"><img src="TYTTO.png"></a></div>
+	<a target="_blank" href="http://omegacheat.freeforums.net/"><img src="http://grim.reaper.rocks/images/logo.png"></a></div>
 
 <!--Name Scroll -->
 <marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="8">
@@ -53,7 +53,7 @@
 	<source src="tytto.mp3" type="audio/mp3">
 		<script>
 		var audio = document.currentScript.parentElement;
-		audio.volume = 0.3;
+		audio.volume = 0.1;
 		</script>
 	
 
