--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div class="center">
 	<div class="animated fadeInDown">
-	<a target="_blank" href="http://omegacheat.freeforums.net/"><img src="http://grim.reaper.rocks/images/logo.png"></a></div>
+	<a target="_blank" href="https://getomega.000webhostapp.com/"><img src="http://grim.reaper.rocks/images/logo.png"></a></div>
 
 <!--Name Scroll -->
 <marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="8">
